# rust_dev_course

./: README.md
homework/lesson-02/: Cargo.toml
lesson-01/: Cargo.toml
lesson-01/src/: main.rs
lesson-02/src/: main.rs
lesson-03/src/: main.rs
lesson-04/src/: main.rs
lesson-05/: Cargo.toml
lesson-05/src/: main.rs
lesson-07/: Cargo.toml  username.csv
lesson-07/src/: main.rs
lesson-09/: .gitignore  Cargo.toml
lesson-09/client/: Cargo.toml
lesson-09/client/src/: main.rs
lesson-09/server/: Cargo.toml
lesson-09/server/src/: main.rs
lesson-09/src/: main.rs
lesson-11/: Cargo.toml  README.md
lesson-11/client/: Cargo.toml
lesson-11/client/src/: client.rs  main.rs
lesson-11/server/: Cargo.toml
lesson-11/server/src/: main.rs  server.rs
lesson-11/shared/: Cargo.toml
lesson-11/shared/src/: lib.rs
lesson-11/src/: main.rs
lesson-13/client/: Cargo.toml
lesson-13/server/: Cargo.toml
lesson-13/server/src/: main.rs
lesson-13/shared/: Cargo.toml
lesson-15/: Cargo.toml  README.md
lesson-15/client/: Cargo.toml
lesson-15/client/src/: main.rs
lesson-15/server/: Cargo.toml
lesson-15/server/src/: main.rs
lesson-15/shared/: Cargo.toml
lesson-15/shared/src/: lib.rs
lesson-16/: README.md
lesson-16/client/src/: main.rs
lesson-16/server/: Cargo.toml
lesson-16/server/src/: main.rs
lesson-16/shared/: Cargo.toml
lesson-16/shared/src/: lib.rs
lesson-16/tests/: integration_test.rs
