[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bincode = "1.3.3"
image = "0.24.7"
serde = "1.0"
serde_derive = "1.0.193"
log = "0.4.20"
tracing-subscriber = "0.3.18"
clap = "2.33.0"
anyhow = "1.0.75"
tokio = { version = "1.35.0", features = ["full"] }

[[bin]]
name = "client"
path = "src/main.rs"
