[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.193"
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = "2.33.0"
anyhow = "1.0.75"
tokio = { version = "1.35.0", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes"] }

[[bin]]
name = "server"
path = "src/main.rs"
