[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.193"
log = "0.4.20"
tracing = "0.1.40"
tracing-attributes = "0.1"
tracing-subscriber = "0.3.18"
clap = "2.33.0"
anyhow = "1.0.75"
tokio = { version = "1.35.0", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "macros"] }
sqlx-core = "0.7.3"
sqlx-postgres = "0.7.3"
tokio-test = "0.4.3"

[[bin]]
name = "server"
path = "src/main.rs"
