# shared/Cargo.toml
[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.193"
bincode = "1.3.3"
log = "0.4.20"
anyhow = "1.0.75"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
